Fix really long attachment preview text lines with no spaces causing scroll overflow issues.

--- a/backend/critterchat/http/static/chat.css
+++ b/backend/critterchat/http/static/chat.css
@@ -1281,6 +1281,7 @@ div.conversation div.item div.attachments div.preview-body {
 
 div.conversation div.item div.attachments div.preview-body span.plaintext {
     font-family: monospace;
+    word-break: break-all;
 }
 
 div.conversation div.item div.attachments div.preview-body.shortened {
